# Bmail

./: -d  .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.tests  README.md  a.out  compose.yml  package.json  python-compose.yml
assets/: bmail-uml-diagram.puml  ex1-example-run.cast  ex2-example-run.cast  ex3-example-run.cast
data/: BloomFilter.txt
project/src/: main.cpp
project/src/app/: App.cpp  App.h
src/: a.out  main.cpp  tcpClient.py
src/FileManager/: BloomFilterFileManager.c  BloomFilterFileManager.cpp  BloomFilterFileManager.h
src/InputValidator/: InputValidator.h  UrlValidator.cpp  UrlValidator.h
src/Output/: CliPrinter.cpp  FileWriter.cpp  FileWriter.h  OutputWriter.h
src/StringValidator/: StringValidator.h  UrlValidator.cpp  UrlValidator.h  Validator.cpp  Validator.h
src/android/: settings.gradle.kts
src/android/app/: build.gradle.kts
src/android/app/src/main/: AndroidManifest.xml
src/android/gradle/: libs.versions.toml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/app/: App.cpp  App.h
src/bloomFilter/: main.cpp
src/bloomFilter/app/: App.cpp  App.h
src/bloomFilter/command/: AddFilterCommand.cpp  AddFilterCommand.h  DeleteFilterCommand.cpp  DeleteFilterCommand.h  QueryFilterCommand.cpp  QueryFilterCommand.h
src/bloomFilter/fileManager/: BloomFilterFileManager.cpp  BloomFilterFileManager.h
src/bloomFilter/filter/: BloomFilter.cpp  BloomFilter.h  FilterFactory.cpp  FilterFactory.h  IFilter.h
src/bloomFilter/hash/: HashFactory.h  IHashFunction.h  StdHash.h
src/bloomFilter/input/: CliReader.cpp  FileReader.h  InputReader.h  TCPReader.h
src/bloomFilter/menu/: ConsoleMenu.h
src/bloomFilter/network/: TCPServer.cpp  TCPServer.h
src/bloomFilter/output/: CliPrinter.cpp  FileWriter.h  TCPWriter.cpp
src/bloomFilter/validator/: UrlValidator.cpp
src/command/: AddFilterCommand.cpp  AddFilterCommand.h  CommandResult.h  DeleteFilterCommand.cpp  DeleteFilterCommand.h  ICommand.h  QueryFilterCommand.cpp  QueryFilterCommand.h
src/fileManager/: IFileManager.h
src/filter/: BloomFilter.cpp  BloomFilter.h  IFilter.h
src/hash/: HashFactory.cpp  IHashFunction.h  StdHash.cpp  StdHash.h
src/input/: CliReader.cpp  CliReader.h  FileReader.cpp  TCPReader.cpp  TCPReader.h
src/menu/: ConsoleMenu.cpp  ConsoleMenu.h  IMenu.h
src/network/: IServer.h  TCPServer.cpp  TCPServer.h
src/output/: CliPrinter.cpp  CliPrinter.h  FileWriter.cpp  OutputWriter.h  TCPWriter.h
src/reactfrontend/: package-lock.json  package.json
src/reactfrontend/src/: App.js  index.css
src/reactfrontend/src/components/auth/: RegisterForm.jsx
src/reactfrontend/src/components/common/hooks/: useAccountPopup.js  useComposePopup.js  useEditProfilePopup.js  useLabelManager.js  useLabelSelector.js  (+5 more)
src/reactfrontend/src/components/layout/: AppLayout.jsx  DarkModeToggle.jsx  Header.jsx
src/reactfrontend/src/components/routes/: protectedRoute.jsx
src/reactfrontend/src/contexts/: SocketContext.js  UserContext.js
src/reactfrontend/src/hooks/: useClickOutside.js  useDarkMode.js  useInboxMails.js  useLogin.js  useRegister.js
src/reactfrontend/src/pages/: inboxPage.jsx  loginPage.jsx  registerPage.jsx
src/reactfrontend/src/pages/forms/: LoginForm.jsx  RegisterForm.css  RegisterForm.jsx
src/reactfrontend/src/services/: api.js  authService.js  labelService.js  mailService.js  userService.js
src/reactfrontend/src/styles/: AccountPopup.css  AuthForm.css  ComposePopup.css  Header.css  InboxPage.css  Labels.css  LabelsPopup.css  MailItem.css  Popup.css  RegisterForm.css
src/reactfrontend/src/utils/: tokenUtils.js  userUtils.js
src/validator/: CommandValidator.cpp  CommandValidator.h  FilterCommandValidator.cpp  FilterCommandValidator.h  Ivalidator.h  StringValidator.cpp  UrlValidator.cpp  UrlValidator.h
src/webServer/: .env  .env.prod  app.js  env.example  eslint.config.mjs  index.js  package-lock.json  package.json
src/webServer/controllers/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/webServer/data/: memory.js
src/webServer/middleware/: auth.js
src/webServer/models/: labelSchema.js  labels.js  labelsModel.js  mailSchema.js  mails.js  mailsModel.js  tokens.js  tokensSchema.js  userSchema.js  users.js  usersModel.js
src/webServer/public/: asset-manifest.json  index.html
src/webServer/public/static/css/: main.2744cbf6.css  main.2744cbf6.css.map  main.975449ba.css  main.975449ba.css.map
src/webServer/public/static/js/: main.684076cf.js  main.684076cf.js.map  main.8b79ceb1.js  main.8b79ceb1.js.map  main.9369e3de.js  main.9369e3de.js.map  main.f9a1ef1f.js  main.f9a1ef1f.js.map
src/webServer/routes/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/webServer/services/: blacklistService.js  labelServices.js  mailServices.js  userService.js
src/webServer/tests/: blacklistApi.test.js  defaultLabelsTests.test.js  jwtAuth.test.js  labelsApi.test.js  loginApi.test.js  mailLabelAssignment.test.js  mailsApi.test.js  searchApi.test.js  spam.test.js  testSetup.js  tokensApi.test.js  trash.test.js  usersApi.test.js  workflowApi.test.js
src/webServer/tests/manual/: TESTS-All.txt  labels.txt
src/webServer/utils/: config.js  error.js  httpResponses.js
tests/: AppTests.cpp  BloomFilterFileManagerTests.cpp  BloomFilterPythonTCPUserTests.cpp  BloomFilterTests.cpp  CMakeLists.txt  CliReaderTests.cpp  CommandValidatorTests.cpp  ConsoleMenuTests.cpp  FileReaderTests.cpp  FilterCommandValidatorTests.cpp  HashFactoryTests.cpp  StdHashTests.cpp  UrlValidatorTest.cpp  UrlValidatorTests.cpp  main.cpp  more-tests.txt  tester.cpp  tests-from-exercise.txt
tests/tmp/: test_nodeServer
wiki/: README.md  android-screenshots.md  routes.md  running-the-system.md  web-screenshots.md
(+146 files in other folders)
